--- a/style.css
+++ b/style.css
@@ -132,12 +132,12 @@
   }
   
   .overlay {
-    position: absolute;
+    position: absolute; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    filter: blur(3px);
+    backdrop-filter: blur(10px);
     z-index: 5;
   }
   
